--- a/src/app/profil/edit-profil/edit-profil.component.html
+++ b/src/app/profil/edit-profil/edit-profil.component.html
@@ -144,38 +144,7 @@
                                         </svg>Github</h6>
                                     <span class="text-secondary"><input type="text" class="form-control" placeholder="github link"></span>
                                 </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                            stroke-linecap="round" stroke-linejoin="round"
-                                            class="feather feather-twitter me-2 icon-inline text-info">
-                                            <path
-                                                d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
-                                            </path>
-                                        </svg>Twitter</h6>
-                                    <span class="text-secondary"><input type="text" class="form-control" placeholder="twitter link"></span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                            stroke-linecap="round" stroke-linejoin="round"
-                                            class="feather feather-instagram me-2 icon-inline text-danger">
-                                            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-                                            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                                            <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-                                        </svg>Instagram</h6>
-                                    <span class="text-secondary"><input type="text" class="form-control" placeholder="instagram link"></span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                            stroke-linecap="round" stroke-linejoin="round"
-                                            class="feather feather-facebook me-2 icon-inline text-primary">
-                                            <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z">
-                                            </path>
-                                        </svg>Facebook</h6>
-                                    <span class="text-secondary"><input type="text" class="form-control" placeholder="facebook link"></span>
-                                </li>
+                              
                             </ul>
                         </div>
                     </div>
@@ -273,6 +242,7 @@
                         <div class="col-sm-12">
                           <div class="card">
                             <div class="card-body">
+                                <button class="edit mb-3" *ngIf="role!='1'" >Add event</button>
                               <ejs-schedule  width='100%' height='550px' [selectedDate]="selectedDate" [eventSettings]="eventSettings">
                                 <e-views>
                                   <e-view option="Week" startHour="07:00" endHour="15:00"></e-view>
@@ -309,15 +279,18 @@
                                                   <div class="header-fullname"><i class="fas fa-user mr-2"></i> {{a.name}}</div>
                                                
                                                   <a
-                                                  class="btn btn-palegreen btn-sm  btn-follow" >
+                                                  class="btn btn-palegreen btn-sm  btn-follow read-more" >
                                                   <i class="fa fa-pencil"></i>
-                                                  <a> Edit</a>
+                                                  <a [routerLink]="['/Editwork',a.id]" >Edit</a>
                   
                                                 </a>
                                                  
                                                   <div class="header-information"><i class="fas fa-envelope mr-2"></i>
-                                                    {{a.email}} </div> <br>
-                    
+                                                    {{a.email}} </div> 
+
+                                                    <div class="header-information"><i class="fas fa-phone mr-2"></i>
+                                                        {{a.number}} </div> 
+                        
                                                 
                                                 </div>
                                                 <div class="col-md-12 col-sm-12 col-xs-12 profile-stats">
