--- a/src/app/profil/edit-work/edit-work.component.html
+++ b/src/app/profil/edit-work/edit-work.component.html
@@ -15,31 +15,6 @@
 
 
 
-
-
-<!--      <form class="box" [formGroup]="projectForm"  *ngIf=" role!='1'    ">
-                  
-                    <div style="max-width:400px;margin:auto">
-                        <div class="input-icons">
-                          <h4>Name</h4>
-                            <input class="input-field" [(ngModel)]="proj.name" formControlName="name" type="text"><br>
-                            <h4>Date</h4>
-                            <input class="input-field"  [ngModel] ="proj.estimated_date | date:'yyyy-MM-dd'" formControlName="date" type="text"><br>
-                            <h4>Description</h4>
-                            <input class="input-field" [(ngModel)]="proj.description" formControlName="description" type="text"><br>
-                           
-                        </div>
-                    </div>
-                     <div class="btn">
-                                    <button (click)="onSubmitProject(proj.id)">
-                                        Save
-                                    </button>
-                                </div>
-                
-                
-                </form>
-                -->
-
 <div class="rpbox" *ngIf=" role!='1' ">
     <div class="boxarchive container">
         <div class="btn_retour mb-5">
@@ -98,9 +73,76 @@
                     </div>
 
                     <div class="row justify-content-md-center">
+                        <button class="btn-delete col-md-2 mx-4" (click)="onDeletepro(proj.id)" >Delete</button>
 
 
-                        <button class="btn btn-primary col-md-2" (click)="onSubmitProject(proj.id)" type="submit">Submit</button>
+                        <button class="btn btn-primary col-md-2 mx-4" (click)="onSubmitProject(proj.id)" type="submit">Submit</button>
+
+                    </div>
+
+                </form>
+
+
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="rpbox" *ngIf=" role=='1' ">
+    <div class="boxarchive container">
+        <div class="btn_retour mb-5">
+            <button routerLink='/ownedwork'><a>🢀 Back</a></button>
+        </div>
+        <div class="part1">
+            <div class="box-1 boxarchive container ">
+
+
+                <form class="mx-5" [formGroup]="PostulationtForm" >
+                    <div class="">
+                        <div class="row justify-content-md-center mb-5">
+                            <div class="avatar-upload ">
+                            
+                                    <div class="avatar-edit">
+                                        <input type='file' id="imageUpload" (change)="onChange($event)" formControlName="cv"
+                                            accept=".png, .jpg, .jpeg" />
+                                        <label for="imageUpload"></label>
+                                        <span class="tooltiptext">Edit CV</span>
+                                    </div>
+                                    <div class="avatar-preview ml-5">
+                                        <p><a style="text-decoration: none;" href="http://127.0.0.1:8000/storage/post/{{app.cv}}" download>
+                                                                   download <i class="fa-solid fa-download"></i></a> </p>
+                                    </div>
+                            
+                                </div>
+                        </div>
+                    </div>
+                    
+                    
+                    <div class="row justify-content-md-center">
+                        <div class="col-md-5 mb-4 mx-4">
+                            <label for="validationServer01">Email</label>
+                            <input formControlName="email"  [(ngModel)]="app.email" type="text" class="form-control p-3" id="validationServer01"
+                                placeholder="First name">
+
+                        </div>
+                        <div class="col-md-5 mb-4 mx-4 ">
+                            <label for="validationServer02">Phone</label>
+                            <input type="number" formControlName="number" class="form-control p-3"
+                            [(ngModel)]="app.number" >
+
+                        </div>
+
+                    </div>
+                   
+
+                    <div class="row justify-content-md-center">
+
+                        <button class="btn-delete col-md-2 mx-4" (click)="onDeleteApp(app.id)" >Delete</button>
+
+                        <button class="btn btn-primary col-md-2 mx-4" (click)="onSubmitApp(app.id)" type="submit">Submit</button>
 
                     </div>
 
@@ -123,63 +165,3 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<form class="box" [formGroup]="PostulationtForm" *ngIf=" role=='1'    ">
-
-    <div class="avatar-upload">
-        <div class="avatar-edit">
-            <input type='file' id="imageUpload" (change)="onChange($event)" formControlName="img"
-                accept=".png, .jpg, .jpeg" />
-            <label for="imageUpload"></label>
-            <span class="tooltiptext">Edit Profile Picture</span>
-        </div>
-        <div class="avatar-preview">
-            <p><a style="text-decoration: none;" href="http://127.0.0.1:8000/storage/post/{{app.cv}}" download>
-                    {{app.cv}}</a> </p>
-        </div>
-
-    </div>
-    <div style="max-width:400px;margin:auto">
-        <div class="input-icons">
-            <h4>Name</h4>
-            <input class="input-field" [(ngModel)]="app.name" formControlName="name" type="text"><br>
-            <h4>Family name</h4>
-            <input class="input-field" [(ngModel)]="app.family_name" formControlName="family_name" type="text"><br>
-            <h4>Email</h4>
-            <input class="input-field" [(ngModel)]="app.email" formControlName="email" type="text"><br>
-            <h4>Number</h4>
-            <input class="input-field" [(ngModel)]="app.number" formControlName="number" type="number"><br>
-
-        </div>
-    </div>
-    <div class="btn">
-        <button (click)="onSubmitApp(app.id)">
-            Save
-        </button>
-    </div>
-
-
-</form>
